tests/miniJava/pos/000968_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 [ 0 ] ) java [ 0 ] = 0 ; else while ( 0 ) { } } }
