tests/miniJava/neg/003399_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java [ String ] = 0 ; } }
